--- a/移动地理信息系统学习笔记.md
+++ b/移动地理信息系统学习笔记.md
@@ -80,7 +80,7 @@ keytool -v -list -keystore debug.keystore
 
 在此我以Android Studio为例，现在AS菜单栏Build下`Generate Signed APK` ，创建签名文件 xxx .jks,注意**最后勾选v1与v2**，然后继续在命令行中定位到该文件所在位置
 
-![image](pic\generateSignedApk.png)
+![image](pic/generateSignedApk.png)
 
 然后输入 
 
