--- a/移动地理信息系统学习笔记.md
+++ b/移动地理信息系统学习笔记.md
@@ -1,18 +1,15 @@
-# 移动地理信息系统学习笔记
+# 1. 移动地理信息系统学习笔记
 这是我的移动地理信息系统课程学习笔记，授课教师：杨超。
 
 本人联系邮箱（2020年前有效）：wsq@cug.edu.cn
 
 github：wsqstar
 
-更新更快的有道云笔记：
-http://note.youdao.com/noteshare?id=df5b1feb9470e13d6f5addfd4b446e39&sub=B4906B8DDCFA4DBE890CB62C4337A23D
-
 以下正文：
 
 ---
 
-## 首先是环境的配置：
+## 1.1. 首先是环境的配置：
 
 **基础无关变量：**
 
@@ -24,13 +21,11 @@ java10、android studio 3.0.1（2018年9月，最新版）
 
 **百度变量：**
 
-百度lbs服务版本：2018年9月
-**特性：ak同时要求开发版（debug）SHA1以及发布版（release）SHA1。（不提交两个的话会出错）**
+百度lbs服务版本：2018年9月 特性：ak要求开发版（debug）SHA1以及发布版（release）SHA1。
+使用的函数出现变化。
 
-注意：部分使用的函数出现变化。后文有专门介绍变化的函数专题。
- 
-### 步骤
-#### 简化步骤示意
+### 1.1.1. 步骤
+#### 1.1.1.1. 简化步骤示意
 配置jdk
 
 
@@ -45,30 +40,15 @@ java10、android studio 3.0.1（2018年9月，最新版）
 
 
 
-## 作业与实习
-### 第一次作业 获取百度地图
-
-```
-要求：
-使用百度sdk，在手机上显示百度地图，做到打开就是天安们广场即可。
-```
-#### 步骤记录与反思
-### 第二次作业 获取地址 
-
-```
-要求：
-使用百度sdk，在手机上显示百度地图，做到打开就是天安们广场即可。
-```
-#### 步骤记录与反思
 
 
 
-## 重要的附录（按照时间梯度）
-### 常用代码：
+## 1.2. 重要的附录（按照时间梯度）
+### 1.2.1. 常用代码：
 
-###### debug SHA1
+###### 1.2.1.0.0.1. debug SHA1
 debug的keystore文件一般位于：C:\Users\ **** \ .android目录下的debug.keystore
-只需在命令行中，点定位到.android目录下（  `cd .android`）
+只需在命令行中，点定位到.android目录下（  cd .android）
 
 输入
 ```
@@ -76,11 +56,9 @@ keytool -v -list -keystore debug.keystore
 ```
 即可，遇到输入口令，一般默认为  `android`
 
-###### release SHA1
+###### 1.2.1.0.0.2. release SHA1
 
-在此我以Android Studio为例，现在AS菜单栏Build下`Generate Signed APK` ，创建签名文件 xxx .jks,注意**最后勾选v1与v2**，然后继续在命令行中定位到该文件所在位置
-
-![image](pic\generateSignedApk.png)
+在此我以Android Studio为例，现在AS菜单栏Build下`Generate Signed APK` ，创建签名文件 xxx .jks，然后继续在命令行中定位到该文件所在位置
 
 然后输入 
 
@@ -88,35 +66,11 @@ keytool -v -list -keystore debug.keystore
 keytool -v -list -keystore ***.jks
 ```
 
-即可。
-
-获取了这两个ak（apikey）之后，就可以在[百度地图开放平台](http://lbsyun.baidu.com/apiconsole/key) http://lbsyun.baidu.com/apiconsole/key 点击 `创建应用`，注意选择`android SDK`,填写完成后，就可以复制api key，复制到
-###### 解决版本冲突
-在app下的build.gradle文件中的dependences {}中添加如下代码：
+即可
 
 
-```
-    androidTestCompile('com.android.support:support-annotations:26.1.0') {
-        force = true
-    }
 
-```
-
-添加后dependences中结构类似：
-
-
-```
-dependencies {
-  androidTestCompile('com.android.support:support-annotations:26.1.0') {
-        force = true
-    }
-...
-}
-```
-##### 文件库的引用
-将BaiduLBS_Android.jar文件放到Project视图的app的libs目录下，然后src\main目录里创建一个名为jniLibs的Directory，把剩下的所有文件夹复制到这里，点击Sync project按钮就完成了
-
-### [关于android studio 出现Error:Execution failed for task ':app:preDebugAndroidTestBuild'. 的解决办法](https://blog.csdn.net/fighting_2017/article/details/80244982)
+### 1.2.2. [关于android studio 出现Error:Execution failed for task ':app:preDebugAndroidTestBuild'. 的解决办法](https://blog.csdn.net/fighting_2017/article/details/80244982)
 
 出错节点：
 查看app下build.gradle文件，发现并没有错误compileSdkVersion 为26，可是没有发现27.1.1版本的com.android.support:support-annotations。可是上述信息明显是版本冲突，于是在external library中寻找**发现了依赖包冲突。**
@@ -142,78 +96,16 @@ dependencies {
 ...
 }
 ```
-### [Android Studio Gradle Build Running 太久，各版本Gradle的下载](https://blog.csdn.net/qq_29983773/article/details/72846133)
-
-`打开一个新项目或者网上的Demo的时候Buliding时间过长的解决方法。`
-
-报错：
-
-```
-Error:(4, 1) A problem occurred evaluating root project 'BaiduMapsApiDemo'.
-> Failed to apply plugin [id 'com.android.application']
-   > Gradle version 2.2 is required. Current version is 4.1. If using the gradle wrapper, try editing the distributionUrl in D:\code\Android\BaiduMap_AndroidSDK_v5.2.0_Sample_demo\BaiduMap_AndroidSDK_v5.2.0_Sample\BaiduMapsApiDemo\gradle\wrapper\gradle-wrapper.properties to gradle-2.2-all.zip
-```
-
-
-原因：本地缺乏对应的gradle，导致Building的时间太长，甚至一直Buiding。
-
-解决方法一：
-
-1.科学上网，你需要一个VPN，让你的电脑可以打开google官网。用资源管理器强制关闭Android Studio 再重新打开Android Studio
-
-解决方法二：
-
-1. 打开当前项目的项目目录。在目录下的  \gradle\wrapper  目录找到  gradle-wrapper 查看该项目的gradle版本，比如我是zip
-
-![20170602171912810](B3A158B1A4BC44EE9D430885600A9E3E)
-
-
-2. 去https://services.gradle.org/distributions/下载相应版本的gradle，（2.2-all为2014年版本，大小大约55.9MB）将zip压缩包（不需要解压缩）放入C:\Users\Administrator\.gradle\wrapper\dists\gradle-2.4.1-all（这个目录可能在不同的电脑也不一样，在这里给window用户推荐个神器Everything,快速查找文件夹与文件）**目录的子目录“6r4uqcc6ovnq6ac6s0txzcpc0”**(每台电脑每个版本对应子目录文件名基本都不一样)文件夹下//测试后发现，我有两个C:\Users\wsq_s\.gradle\wrapper\dists\gradle-4.1-all（gradle-2.10-all），选用4.1
-3. 用资源管理器强制关闭Android Studio 再重新打开Android Studio//测试时使用正常关闭
-
-
-#### 关于Gradle版本不正确的问题
-以下是报错：
->Error:Gradle version 2.2 is required. Current version is 4.1. If using the gradle wrapper, try editing the distributionUrl in D:\code\Android\BaiduMap_AndroidSDK_v5.2.0_Sample_demo\BaiduMap_AndroidSDK_v5.2.0_Sample\BaiduMapsApiDemo\gradle\wrapper\gradle-wrapper.properties to gradle-2.2-all.zip
-
-大意为：需要2.2版本的Gradle，现在的版本为4.1，如果使用那个gradle wrapper，请尝试修改***路径下面的gradle-wrapper.properties，将其中的distributionUrl 改为 gradle-2.2-all.zip的所在地址（完全路径，以zip文件结尾）
-#### 关于Error:Unsupported method: BaseConfig.getApplicationIdSuffix().即dependencies 设置版本不正确的问题
-
->Error:Unsupported method: BaseConfig.getApplicationIdSuffix().
-The version of Gradle you connect to does not support that method.
-To resolve the problem you can change/upgrade the target version of Gradle you connect to.
-Alternatively, you can ignore this exception and read other information from the model.
-
-将 build.gradle 中的
-
-
-```
- dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-    }
-```
-
-改为：
-
-
-```
-dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-    }
-```
 
 
 
-
-## 引用以及感谢（尚未排序）
-
-
-###### [关于android studio 出现Error:Execution failed for task ':app:preDebugAndroidTestBuild'. 的解决办法](https://blog.csdn.net/fighting_2017/article/details/80244982)
+## 1.3. 引用以及感谢（尚未排序）
 
 
-###### [百度地图SDK申请之获取发布版，开发版SHA1](https://blog.csdn.net/qq_30548105/article/details/53535610)
+###### 1.3.0.0.0.3. [关于android studio 出现Error:Execution failed for task ':app:preDebugAndroidTestBuild'. 的解决办法](https://blog.csdn.net/fighting_2017/article/details/80244982)
 
-###### [Android Studio Gradle Build Running 太久，各版本Gradle的下载](https://blog.csdn.net/qq_29983773/article/details/72846133)
+
+###### 1.3.0.0.0.4. [百度地图SDK申请之获取发布版，开发版SHA1](https://blog.csdn.net/qq_30548105/article/details/53535610)
 
 
 
