--- a/移动地理信息系统学习笔记.md
+++ b/移动地理信息系统学习笔记.md
@@ -18,7 +18,51 @@ github：wsqstar
 http://note.youdao.com/noteshare?id=df5b1feb9470e13d6f5addfd4b446e39&sub=B4906B8DDCFA4DBE890CB62C4337A23D
 
 以下正文：·
+<!-- TOC -->
 
+- [移动地理信息系统学习笔记](#移动地理信息系统学习笔记)
+    - [首先是环境的配置：](#首先是环境的配置)
+        - [步骤](#步骤)
+            - [简化步骤示意](#简化步骤示意)
+    - [作业与实习](#作业与实习)
+        - [第一次作业 获取百度地图](#第一次作业-获取百度地图)
+            - [步骤记录与反思](#步骤记录与反思)
+        - [第二次作业 获取地址](#第二次作业-获取地址)
+            - [步骤记录与反思](#步骤记录与反思-1)
+        - [第三次作业 单车APP iBike](#第三次作业-单车app-ibike)
+            - [主要流程](#主要流程)
+            - [单车APP重要参考&入门笔记](#单车app重要参考入门笔记)
+                - [零散笔记](#零散笔记)
+                    - [关键知识点（Java语言基础）](#关键知识点java语言基础)
+                - [android:pathData](#androidpathdata)
+                - [配置xml：url is not registered](#配置xmlurl-is-not-registered)
+                - [Android 动态添加布局 LinerLayout 和RelativeLayout](#android-动态添加布局-linerlayout-和relativelayout)
+            - [Drawable](#drawable)
+                - [AndroidStudio 新建不同的Drawable文件夹](#androidstudio-新建不同的drawable文件夹)
+                - [Android 图像绘制之 Drawable](#android-图像绘制之-drawable)
+                - [android（drawable文件夹）图片适配](#androiddrawable文件夹图片适配)
+                - [关于android:id="@+id/xx"的理解](#关于androidididxx的理解)
+                - [@string/](#string)
+                - [配置颜色文件color.xml](#配置颜色文件colorxml)
+            - [步骤记录与反思](#步骤记录与反思-2)
+    - [重要的附录（按照时间梯度）](#重要的附录按照时间梯度)
+        - [常用代码：](#常用代码)
+                    - [debug SHA1](#debug-sha1)
+                    - [release SHA1](#release-sha1)
+                    - [解决版本冲突](#解决版本冲突)
+                - [文件库的引用](#文件库的引用)
+        - [[关于android studio 出现Error:Execution failed for task ':app:preDebugAndroidTestBuild'. 的解决办法](https://blog.csdn.net/fighting_2017/article/details/80244982)](#关于android-studio-出现errorexecution-failed-for-task-apppredebugandroidtestbuild-的解决办法httpsblogcsdnnetfighting_2017articledetails80244982)
+        - [[Android Studio Gradle Build Running 太久，各版本Gradle的下载](https://blog.csdn.net/qq_29983773/article/details/72846133)](#android-studio-gradle-build-running-太久各版本gradle的下载httpsblogcsdnnetqq_29983773articledetails72846133)
+            - [关于Gradle版本不正确的问题](#关于gradle版本不正确的问题)
+            - [关于Error:Unsupported method: BaseConfig.getApplicationIdSuffix().即dependencies 设置版本不正确的问题](#关于errorunsupported-method-baseconfiggetapplicationidsuffix即dependencies-设置版本不正确的问题)
+    - [引用以及感谢（尚未排序）](#引用以及感谢尚未排序)
+                    - [[关于android studio 出现Error:Execution failed for task ':app:preDebugAndroidTestBuild'. 的解决办法](https://blog.csdn.net/fighting_2017/article/details/80244982)](#关于android-studio-出现errorexecution-failed-for-task-apppredebugandroidtestbuild-的解决办法httpsblogcsdnnetfighting_2017articledetails80244982-1)
+                    - [[百度地图SDK申请之获取发布版，开发版SHA1](https://blog.csdn.net/qq_30548105/article/details/53535610)](#百度地图sdk申请之获取发布版开发版sha1httpsblogcsdnnetqq_30548105articledetails53535610)
+                    - [[Android Studio Gradle Build Running 太久，各版本Gradle的下载](https://blog.csdn.net/qq_29983773/article/details/72846133)](#android-studio-gradle-build-running-太久各版本gradle的下载httpsblogcsdnnetqq_29983773articledetails72846133-1)
+                    - [参考案例：[Android实现注册登录头像上传等功能常规开发(Android端，服务器端开发实例)](https://blog.csdn.net/w690333243/article/details/72875159)](#参考案例android实现注册登录头像上传等功能常规开发android端服务器端开发实例httpsblogcsdnnetw690333243articledetails72875159)
+                    - [参考书籍：[《Android权威编程指南（第2版）》[美] Billl Phillips 等著 王明发 译](https://item.jd.com/11939710.html)](#参考书籍android权威编程指南第2版美-billl-phillips-等著-王明发-译httpsitemjdcom11939710html)
+
+<!-- /TOC -->
 ---
 
 ## 首先是环境的配置：
